# automated-pick-and-place-cell

./: .gitignore  README.md
src/mock_pusher/: package.xml  setup.cfg  setup.py
src/mock_pusher/mock_pusher/: mock_pusher.py
src/mock_robot/: package.xml  setup.py
src/mock_robot/mock_robot/: mock_robot.py
src/mock_scanner/: package.xml  setup.cfg  setup.py
src/mock_scanner/mock_scanner/: mock_scanner.py
src/mock_table_sensor/: package.xml  setup.cfg  setup.py
src/mock_table_sensor/mock_table_sensor/: mock_table_sensor.py
src/scan_table_manager/: CMakeLists.txt  package.xml
src/scan_table_manager/include/scan_table_manager/: scan_table_manager.hpp
src/scan_table_manager/launch/: scan_table_system.launch.py
src/scan_table_manager/src/: scan_table_manager.cpp
